@@ -613,7 +613,12 @@ specify multiple occurrences of the arguments.</p>
     <td valign="top">packagelistLoc</td>
     <td valign="top">The location to the directory containing the package-list file for
                      the external documentation</td>
-    <td align="center" valign="top">Only if the offline attribute is true</td>
+    <td align="center" valign="top" rowspan="2">One of the two if the offline attribute is true</td>
+  </tr>
+  <tr>
+    <td valign="top">packagelistURL</td>
+    <td valign="top">The URL of the the directory containing the package-list file for
+                     the external documentation</td>
   </tr>
   <tr>
     <td valign="top">resolveLink</td>
